--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.10.6",
     "vite": "^2.9.5"
+  },
+  "dependencies": {
+    "svelte-routing": "^1.6.0"
   }
 }
